# esp_print_driver

./: .gitignore  CMakeLists.txt  Dockerfile  sdkconfig  项目架构说明.md
.devcontainer/: devcontainer.json
components/cutter/: CMakeLists.txt  cutter.c  cutter.h
components/fan/: CMakeLists.txt  fan.c  fan.h
components/motor/: CMakeLists.txt  extruder_ctrl.c  extruder_ctrl.h  motor.c  motor.h
components/pid_ctrl/: CMakeLists.txt  pid_ctrl.c  pid_ctrl.h
components/serial_reader/: CMakeLists.txt  README.md  serial_reader.c  serial_reader.h
components/temperature/: CMakeLists.txt  temperature.c  temperature.h
components/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  使用前修改.txt
components/ui.backup/: CMakeLists.txt  filelist.txt  ui.c  ui.h
components/ui.backup/fonts/: ui_font_Font1.c
components/ui.backup/images/: ui_img_1891457198.c  ui_img_browser_extruder3_png.c  ui_img_calibration_png.c  ui_img_emergency_png.c  ui_img_fan1_png.c  ui_img_fan_png.c  ui_img_fill_file_folder_add_png.c  ui_img_power_png.c  ui_img_temperature_png.c
components/ui.backup/screens/: ui_AxisScreen.c  ui_HomeScreen.c  ui_TempScreen.c
components/ui/components/: ui_comp_hook.c
components/ui/fonts/: ui_font_Font1.c
components/ui/screens/: ui_AxisScreen.c  (+2 more)
lvgl/: lv_conf.h
lvgl_esp32_drivers/: lvgl_helpers.h  lvgl_spi_conf.h
lvgl_esp32_drivers/lvgl_i2c/: i2c_manager.c
lvgl_esp32_drivers/lvgl_tft/: esp_lcd_backlight.c  ili9341.c
lvgl_esp32_drivers/lvgl_touch/: ft6x36.c  ft6x36.h
main/: CMakeLists.txt  main.c
tools/: pid_autotune.py
(+6 files in other folders)
